--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@strapi/plugin-seo",
+  "name": "@alexvyber/strapi-plugin-seo",
   "version": "1.9.5",
   "description": "Make your Strapi content SEO friendly.",
   "strapi": {
@@ -38,7 +38,7 @@
     }
   ],
   "engines": {
-    "node": ">=12.x.x <=18.x.x",
+    "node": ">=12.x.x <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
